--- a/app/scripts/templates/todos.ejs
+++ b/app/scripts/templates/todos.ejs
@@ -1,2 +1,7 @@
-<p>Your content here.</p>
-
+<form class="input-append">
+	<input id="new-todo" type="text" placeholder="Please add new task"></input>
+	<input class="btn" type="submit" value="Submit"></input>
+</form>
+<ul>
+	<!-- todo items -->
+</ul>
