--- a/app/scripts/templates/todos.ejs
+++ b/app/scripts/templates/todos.ejs
@@ -1,6 +1,6 @@
 <form class="input-append">
-	<input id="new-todo" type="text" placeholder="Please add new task"></input>
-	<input class="btn" type="submit" value="Submit"></input>
+	<input id="new-todo" type="text" placeholder="Please add new task" />
+	<input class="btn" type="submit" value="Submit" />
 </form>
 <ul>
 	<!-- todo items -->
