working todo app

--- a/app/scripts/templates/todo.ejs
+++ b/app/scripts/templates/todo.ejs
@@ -1,2 +1,7 @@
-<p>Your content here.</p>
-
+<input type="checkbox" <% if (done) { %>checked<% } %> />
+<form>
+	<input type="text" value="<%= title %>" />
+</form>
+<span>
+	<%= title %>
+</span>
