--- a/app/scripts/templates/todos.ejs
+++ b/app/scripts/templates/todos.ejs
@@ -1,6 +1,8 @@
-<form class="input-append">
-	<input id="new-todo" type="text" placeholder="Please add new task" />
-	<input class="btn" type="submit" value="Submit" />
+<form class="input-group">
+	<input class="form-control" id="new-todo" type="text" placeholder="Please add new task" />
+	<div class="input-group-btn">
+		<input class="btn" type="submit" value="Submit" />		
+	</div>
 </form>
 <ul>
 	<!-- todo items -->
